fix/ prevent author component from scrolling on mobile phones#2

--- a/src/styles/Author.css
+++ b/src/styles/Author.css
@@ -1,6 +1,6 @@
 .author-wrap {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: space-between;
   align-items: center;
